Cambio de Navegación a Nuevo Contacto con Command

--- a/Contactos/Contactos.csproj
+++ b/Contactos/Contactos.csproj
@@ -20,6 +20,7 @@
     <Folder Include="View\" />
     <Folder Include="Model\" />
     <Folder Include="ViewModel\" />
+    <Folder Include="ViewModel\Commands\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Remove="MainPage.xaml" />
